# nonebot-plugin-codex

./: .gitmessage  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/maintenance/: 2026-03-12-repository-follow-ups.md  2026-03-17-telegram-agent-labels-and-rendering.md  2026-03-17-telegram-context-compaction.md  2026-03-17-telegram-subagent-visibility.md
docs/plans/: 2026-03-12-home-effort-regression-design.md  2026-03-12-home-effort-regression.md  2026-03-12-model-cache-and-cn-templates-design.md  2026-03-12-model-cache-and-cn-templates.md  2026-03-12-repository-standardization-design.md  2026-03-12-repository-standardization.md  2026-03-15-onboarding-guided-entry-design.md  2026-03-15-onboarding-guided-entry.md  2026-03-15-telegram-html-rendering-design.md  2026-03-15-telegram-html-rendering.md  2026-03-15-unified-workspace-panel-design.md  2026-03-15-unified-workspace-panel.md  2026-03-17-telegram-agent-labels-and-rendering.md  2026-03-19-telegram-typing-and-release-notes.md
src/nonebot_plugin_codex/: __init__.py  native_client.py  service.py  telegram.py  telegram_commands.py  telegram_rendering.py
tests/: conftest.py  test_native_client.py  test_plugin_meta.py  test_release_notes.py  test_service.py  test_telegram_commands.py  test_telegram_handlers.py  test_telegram_rendering.py
tools/: release_notes.py
