[project]
name = "nonebot-plugin-codex"
version = "0.1.0"
description = "Telegram bridge plugin for driving Codex from NoneBot"
authors = [
    {name = "ttiee", email = "469784630@qq.com"},
]
dependencies = [
    "nonebot2>=2.4.4",
    "nonebot-adapter-telegram>=0.1.0b20",
    "tomli>=2.0.1; python_version < '3.11'",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.pdm.scripts]
format = { composite = ["isort . ","black . ","ruff check ."] }
test = "pytest"


[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 90
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.nonebot]
adapters = [

]
plugin_dirs = ["src"]
builtin_plugins = []
